Add login page error message

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,4 +2,5 @@ login.logIn = Log in
 login.signUp = Sign up
 login.email = Email
 login.password = Password
+login.error = Invalid email or password
 user.logOut = Log out
