--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -12,10 +12,10 @@ user.password = Password
 user.birthday = Birthday
 valid.user.name.notEmpty = Name should not be empty
 valid.user.name.size = Name size should be from 2 to 128 characters
-valid.user.surname.notEmpty = Surname should not be empty
 valid.user.surname.size = Surname size should be from 2 to 128 characters
 valid.user.email.notEmpty = Email should not be empty
 valid.user.email.format = Invalid email format
+valid.user.email.inUse = Email is already in use
 valid.user.email.size = Email size should be from 2 to 128 characters
 valid.user.password.notEmpty = Password should not be empty
 valid.user.password.size = Password size should be at least 4 characters
