Add dto - UserRegistrationRequest

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,6 +9,7 @@ user.name = Name
 user.surname = Surname
 user.email = Email
 user.password = Password
+user.repeatPassword = Repeat password
 user.birthday = Birthday
 valid.user.name.notEmpty = Name should not be empty
 valid.user.name.size = Name size should be from 2 to 128 characters
@@ -18,5 +19,6 @@ valid.user.email.format = Invalid email format
 valid.user.email.inUse = Email is already in use
 valid.user.email.size = Email size should be from 2 to 128 characters
 valid.user.password.notEmpty = Password should not be empty
+valid.user.passwords.identical = Passwords should be identical
 valid.user.password.size = Password size should be at least 4 characters
-valid.user.birthday.past = Birthday should be in past
+valid.user.birthday.past = Birthday should be in the past
