--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,6 +11,8 @@ user.email = Email
 user.password = Password
 user.repeatPassword = Repeat password
 user.birthday = Birthday
+user.role = Role
+user.registeredAt = Registered
 valid.user.name.notEmpty = Name should not be empty
 valid.user.name.size = Name size should be from 2 to 128 characters
 valid.user.surname.size = Surname size should be from 2 to 128 characters
