Add developerMessage field to ResponseBody

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
+validation.fail = Invalid data
 login.logIn = Log in
 login.signUp = Sign up
 login.email = Email
@@ -24,3 +25,6 @@ valid.user.password.notEmpty = Password should not be empty
 valid.user.passwords.identical = Passwords should be identical
 valid.user.password.size = Password size should be at least 4 characters
 valid.user.birthday.past = Birthday should be in the past
+user.avatar.notAttached = Avatar file not attached
+user.avatar.uploaded = Avatar successfully uploaded
+user.avatar.deleted = Avatar successfully deleted
