Add user updating endpoint: PATCH /usere

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -28,3 +28,4 @@ valid.user.birthday.past = Birthday should be in the past
 user.avatar.notAttached = Avatar file not attached
 user.avatar.uploaded = Avatar successfully uploaded
 user.avatar.deleted = Avatar successfully deleted
+user.updated = User data successfully updated
