Add endpoint for deletion from followers

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -30,3 +30,4 @@ user.avatar.uploaded = Avatar successfully uploaded
 user.avatar.deleted = Avatar successfully deleted
 user.updated = User data successfully updated
 user.following.added = Following added successfully
+user.following.removed = Following removed successfully
