--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -25,6 +25,8 @@ valid.user.password.notEmpty = Password should not be empty
 valid.user.passwords.identical = Passwords should be identical
 valid.user.password.size = Password size should be at least 4 characters
 valid.user.birthday.past = Birthday should be in the past
+valid.category.name.size = Category name size should be from 1 to 128 characters
+valid.category.name.unique = Category name should be unique
 user.avatar.notAttached = Avatar file not attached
 user.avatar.uploaded = Avatar successfully uploaded
 user.avatar.deleted = Avatar successfully deleted
