Add categories deletion endpoint

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -33,3 +33,4 @@ user.avatar.deleted = Avatar successfully deleted
 user.updated = User data successfully updated
 user.following.added = Following added successfully
 user.following.removed = Following removed successfully
+category.removed = Category removed successfully
