Add Activity entity jakarta validation constraints

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -27,6 +27,9 @@ valid.user.password.size = Password size should be at least 4 characters
 valid.user.birthday.past = Birthday should be in the past
 valid.category.name.size = Category name size should be from 1 to 128 characters
 valid.category.name.unique = Category name should be unique
+valid.activity.name.size = Activity name size should be from 2 to 256 characters
+valid.activity.description.size = Activity description size should be from 2 to 512 characters
+valid.activity.minutesRequired = Amount of minutes required should be greater than zero
 user.avatar.notAttached = Avatar file not attached
 user.avatar.uploaded = Avatar successfully uploaded
 user.avatar.deleted = Avatar successfully deleted
