Complete NewActivityRequest dto

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -33,6 +33,8 @@ valid.activity.description.size = Activity description size should be from 2 to 
 valid.activity.description.notEmpty = Activity description should not be empty
 valid.activity.minutesRequired = Amount of minutes required should be greater than zero
 valid.activity.categoryIds.notEmpty = At least one category should be selected
+valid.repetitiveActivity.periodType.notNull = Period type should not be empty
+valid.repetitiveActivity.timesPerPeriod = Times per period should be from 0 to 10000
 user.avatar.notAttached = Avatar file not attached
 user.avatar.uploaded = Avatar successfully uploaded
 user.avatar.deleted = Avatar successfully deleted
