Update activity dtos to correspond to the new activities structure

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -34,6 +34,7 @@ valid.activity.description.notEmpty = Activity description should not be empty
 valid.activity.minutesRequired = Amount of minutes required should be greater than zero
 valid.activity.categoryIds.notEmpty = At least one category should be selected
 valid.limitedCompletionsActivity.completionsLimit = Completions limit must be from 1 to 10000
+valid.limitedCompletionsActivity.periodType.notEmpty = Period type must not be empty
 user.avatar.notAttached = Avatar file not attached
 user.avatar.uploaded = Avatar successfully uploaded
 user.avatar.deleted = Avatar successfully deleted
