--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -15,25 +15,26 @@ user.birthday = Birthday
 user.role = Role
 user.registeredAt = Registered
 valid.user.name.notEmpty = Name should not be empty
-valid.user.name.size = Name size should be from 2 to 128 characters
-valid.user.surname.size = Surname size should be from 2 to 128 characters
+valid.user.name.size = Name size should be from 2 to 127 characters
+valid.user.surname.size = Surname size should be from 2 to 127 characters
 valid.user.email.notEmpty = Email should not be empty
 valid.user.email.format = Invalid email format
 valid.user.email.inUse = Email is already in use
-valid.user.email.size = Email size should be from 2 to 128 characters
+valid.user.email.size = Email size should be from 2 to 127 characters
 valid.user.password.notEmpty = Password should not be empty
 valid.user.passwords.identical = Passwords should be identical
 valid.user.password.size = Password size should be at least 4 characters
 valid.user.birthday.past = Birthday should be in the past
-valid.category.name.size = Category name size should be from 1 to 128 characters
+valid.category.name.size = Category name size should be from 1 to 127 characters
 valid.category.name.unique = Category name should be unique
-valid.activity.name.size = Activity name size should be from 2 to 256 characters
+valid.activity.name.size = Activity name size should be from 2 to 255 characters
 valid.activity.name.notEmpty = Activity name should not be empty
-valid.activity.description.size = Activity description size should be from 2 to 512 characters
+valid.activity.description.size = Activity description size should be from 2 to 511 characters
 valid.activity.description.notEmpty = Activity description should not be empty
 valid.activity.minutesRequired = Amount of minutes required should be greater than zero
 valid.activity.categoryIds.notEmpty = At least one category should be selected
-valid.limitedCompletionsActivity.completionsLimit = Completions limit must be from 1 to 10000
+valid.limitedCompletionsActivity.completionsLimit = Completions limit must be from 1 to 9999
+valid.limitedCompletionsActivity.completionsLimit.notNull = Completions limit must be specified
 valid.limitedCompletionsActivity.periodType.notEmpty = Period type must not be empty
 user.avatar.notAttached = Avatar file not attached
 user.avatar.uploaded = Avatar successfully uploaded
