Remove unused messages from messages.properties; add localized test messages to messages_uk.properties

--- a/src/main/resources/messages_uk.properties
+++ b/src/main/resources/messages_uk.properties
@@ -1,4 +1,2 @@
-login.logIn = Вхід
-login.signUp = Реєстрація
-login.password = Пароль
-user.logOut = Вихід
+valid.user.name.notEmpty = Як тебе звати, славний пане?
+valid.user.name.size = Коли йдеться про ім'я, розмір таки має значення(2-127)
