Make use of UIMessage in MediaTypeExceptionAdvice

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -22,3 +22,4 @@ valid.limitedCompletionsActivity.completionsLimit = Completions limit must be fr
 valid.limitedCompletionsActivity.completionsLimit.notNull = Completions limit must be specified
 valid.limitedCompletionsActivity.periodType.notEmpty = Period type must not be empty
 user.avatar.notAttached = Avatar file not attached
+file.formatNotSupported = File format not supported
