Replace PeriodType with period duration minutes

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -20,6 +20,6 @@ valid.activity.minutesRequired = Amount of minutes required should be greater th
 valid.activity.categoryIds.notEmpty = At least one category should be selected
 valid.limitedCompletionsActivity.completionsLimit = Completions limit must be from 1 to 9999
 valid.limitedCompletionsActivity.completionsLimit.notNull = Completions limit must be specified
-valid.limitedCompletionsActivity.periodType.notEmpty = Period type must not be empty
+valid.limitedCompletionsActivity.periodDurationMinutes = Period duration minutes must be from 1 to 99999
 user.avatar.notAttached = Avatar file not attached
 file.formatNotSupported = File format not supported
