--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -21,5 +21,6 @@ valid.activity.categoryIds.notEmpty = At least one category should be selected
 valid.limitedCompletionsActivity.completionsLimit = Completions limit must be from 1 to 9999
 valid.limitedCompletionsActivity.completionsLimit.notNull = Completions limit must be specified
 valid.limitedCompletionsActivity.periodDurationMinutes = Period duration minutes must be from 1 to 99999
+valid.limitedCompletionsActivity.periodDurationMinutes.notNull = Period duration minutes must be specified
 user.avatar.notAttached = Avatar file not attached
 file.formatNotSupported = File format not supported
